--- a/node/src/main/webapp/WEB-INF/views/index.html
+++ b/node/src/main/webapp/WEB-INF/views/index.html
@@ -5,14 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<table border="1">
-    <caption>Danh sach list dang ket noi</caption>
-    <th>Hash code Address</th>
-    <div id = "tableAddress">
-        <script src="../../../resources/static/js/displayAddress.js"></script>
-    </div>
-</table>
-<button>Refresh</button>
+
 
 
 <h1>Generate Public, Private Key</h1>
@@ -20,6 +13,26 @@
 <label>Public Key</label>    <input type="text" name="publicKey" value=" "> <br>
 <label>Name</label>    <input type="text" name="name"><br>
 <!-- <label>seftNode</label>    <input type="text" name="selfNode"><br> -->
-<input type="button" value="Tao" ></form>
+<button  id="create">Create</button>
+<table border="1" id = "tableAddress">
+    <caption>Danh sach list dang ket noi</caption>
+    <th>Hash code Address</th>
+    <th>Name</th>
+    <th>PublicKey</th>
+</table>
+<table border="1" id = "tableAddress">
+    <caption>Danh sach list dang ket noi</caption>
+    <th>Hash code Address</th>
+    <th>Name</th>
+    <th>PublicKey</th>
+</table>
+<table border="1" id = "tableAddress">
+    <caption>Danh sach list dang ket noi</caption>
+    <th>Hash code Address</th>
+    <th>Name</th>
+    <th>PublicKey</th>
+</table>
+<button>Refresh</button>
+<script src="../../../resources/static/js/displayAddress.js"></script>
 </body>
 </html>
